p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/OrderLineItem__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderId</label>
    <referenceTo>CustomerOrder__c</referenceTo>
    <relationshipLabel>OrderLineItems</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>