p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/OrderLineItem__c/fields/Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>Quantity_c__c</fullName>
    <label>Quantity__c</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>